[build-system]
requires        = ['setuptools>=61.0', "cython", "numpy"]                  # 'cython'
build-backend   = 'setuptools.build_meta'   

[project]
name = "miaplpy"
description = "A package for inversion utilities"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

dynamic = ["version"] # , "dependencies"]

# Entry points for the command line interface
[project.scripts]
miaplpyApp = "miaplpy.miaplpyApp:main"
'check_ifgs.py' = "miaplpy.check_ifgs:main"
'correct_geolocation.py' = "miaplpy.correct_geolocation:main"
'cpxview.py' = "miaplpy.cpxview:main"
'find_short_baselines.py' = "miaplpy.find_short_baselines:find_baselines"
'generate_temporal_coherence.py' = "miaplpy.generate_temporal_coherence:main"
'generate_unwrap_mask.py' = "miaplpy.generate_unwrap_mask:main"
'load_ifgram.py' = "miaplpy.load_ifgram:main"
'load_slc_geometry.py' = "miaplpy.load_slc_geometry:main"
'network_inversion.py' = "miaplpy.network_inversion:main"
'phase_linking.py' = "miaplpy.phase_linking:main"
'prep_slc_isce.py' = "miaplpy.prep_slc_isce:main"
'scatterview.py' = "miaplpy.scatterview:main"
'simulation.py' = "miaplpy.simulation:simulate_and_calculate_different_method_rms"
'tcoh_view.py' = "miaplpy.tcoh_view:main"
'generate_ifgram.py' = "miaplpy.generate_ifgram:main"
'unwrap_ifgram.py' = "miaplpy.unwrap_ifgram:main"


[tool.setuptools.packages.find]
where = ["src"]
#include = ["defaults/*.cfg", "defaults/*.full"]

[tool.setuptools.package-data]
myModule = ["defaults/*.cfg", "defaults/*.full"]

[tool.setuptools.dynamic]
#dependencies = { file = ["requirements.txt"] }
version = {attr = "miaplpy.__version__"}


[project.urls]
Homepage = "https://github.com/insarlab/MiaplPy/"
"Bug Tracker" = "https://github.com/insarlab/MiaplPy/issues"
